Add more to bad words list

--- a/config/local_env.yml
+++ b/config/local_env.yml
@@ -7,4 +7,4 @@
 # GMAIL_USERNAME: 'Your_Gmail_Username'
 # makes 'Your_Gmail_Username' available as ENV["GMAIL_USERNAME"]
 
-BAD_WORDS: 'hell damn shit fuck goddamn pussy'
+BAD_WORDS: 'ass bitch cock cunt damn dick fuck goddamn hell piss pussy shit slut'
